build-logs-failed/build-vivid-supercollider-0.4.1.2.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - vivid-supercollider-0.4.1.2 (lib) (first run)
 - vivid-supercollider-0.4.1.2 (test:vivid-sc-tests) (first run)
Configuring library for vivid-supercollider-0.4.1.2...
Preprocessing library for vivid-supercollider-0.4.1.2...
Building library for vivid-supercollider-0.4.1.2...
[1 of 4] Compiling Vivid.SC.Server.Types
[2 of 4] Compiling Vivid.SC.SynthDef.Types
[3 of 4] Compiling Vivid.SC.SynthDef.Literally
[4 of 4] Compiling Vivid.SC.Server.Commands
Configuring test suite 'vivid-sc-tests' for vivid-supercollider-0.4.1.2...
Preprocessing test suite 'vivid-sc-tests' for vivid-supercollider-0.4.1.2...
Building test suite 'vivid-sc-tests' for vivid-supercollider-0.4.1.2...
[1 of 1] Compiling Main

test/Test.hs:26:1: error:
    Could not find module ‘Vivid.OSC.Old.Util’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
26 | import Vivid.OSC.Old.Util
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:vivid-sc-tests from vivid-supercollider-0.4.1.2.

